--- a/src/app/Pages/client/components/editclients/editclients.html
+++ b/src/app/Pages/client/components/editclients/editclients.html
@@ -31,15 +31,18 @@
           <input class="mt-3" type="text" formControlName="title" placeholder="Title" />
           <input class="mt-3" type="text" formControlName="email" placeholder="Email" />
           <input class="mt-3" type="password" formControlName="password" placeholder="Password (Optional)" />
+
         </div>
       </div>
 
       <!-- Right Side -->
       <div class="col-md-6 px-0">
         <div class="row second ps-2">
-          <input class="mt-3" type="text" formControlName="username" placeholder="Username" />
+          <input class="mt-3 px-0" type="text" formControlName="username" placeholder="Username" />
           <input class="mt-4 px-0" type="text" formControlName="location" placeholder="Location" />
           <input class="mt-3 px-0 mb-2" type="text" formControlName="website" placeholder="Website" />
+                              <input class="mt-3 px-0" type="tel" formControlName="phoneNumber" placeholder="Phone Number" />
+
         </div>
 
         <!-- Client Title -->
